adjusting margins/fixing bg image to get rid of white space

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
 .header h1 {
     font-family: "Archivo Black";
     color:#fff;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .container .row .col-md-4 .img-thumbnail {
     margin-top: 10px;
     margin-bottom: 20px;
 }
+ 
+main {
+    background: url(./assets/portfolio-background.png) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+    }
 
 .containerportfolio {
-    margin-top: 20px;
     margin-bottom: 20px;
-    background-image: url(./assets/portfolio-background.png);
 }
 
 .navbar {
